<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_accounts_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_name"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <EditText
        android:id="@+id/et_accounts_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_accounts_name"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_add_address"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />

    <EditText
        android:id="@+id/et_accounts_contact_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_accounts_address"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_add_contact_number"
        android:inputType="number"
        android:maxLength="10"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey" />
</RelativeLayout>
