<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".order.OrderDetail">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/label_bill_number"
        style="@style/LabelOrderDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_bill_date"
        style="@style/LabelOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_customer_name"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_customer_address"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_customer_name" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_contact_number"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_model_name"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_variant"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_quantity"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_total_amount"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_advance"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_due_amount"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_delivery_date"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />


    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/LabelOrderDetail"
        android:text="@string/label_order_status"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/tv_order_bill_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="190dp"
        tools:text="1234"
        style="@style/ValueOrderDetail"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tv_order_booking_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Mar 11, 2018"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_bill_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_bill_number" />

    <TextView
        android:id="@+id/tv_order_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Akshay Agrawal"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_booking_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_booking_date" />

    <TextView
        android:id="@+id/tv_order_customer_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Bhatapara"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_customer_name" />

    <TextView
        android:id="@+id/tv_order_customer_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="+919329871944"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_customer_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_customer_address" />

    <TextView
        android:id="@+id/tv_order_model_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Redmi Note 5 Pro"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_customer_phone_number"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_customer_phone_number" />

    <TextView
        android:id="@+id/tv_order_variant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="4/64 Black"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_model_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_model_name" />

    <TextView
        android:id="@+id/tv_order_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="1"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_variant"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_variant" />

    <TextView
        android:id="@+id/tv_order_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="13999"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_quantity"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_quantity" />

    <TextView
        android:id="@+id/tv_order_advance_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="2000"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_amount" />

    <TextView
        android:id="@+id/tv_order_pending_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="11999"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_advance_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_advance_amount" />

    <TextView
        android:id="@+id/tv_order_delivery_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="Mar 13, 2018"
        style="@style/ValueOrderDetail"
        app:layout_constraintStart_toStartOf="@+id/tv_order_pending_amount"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_pending_amount" />

    <TextView
        android:id="@+id/tv_order_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        tools:text="pending"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:background="@color/value_green"
        app:layout_constraintStart_toStartOf="@+id/tv_order_delivery_date"
        app:layout_constraintTop_toBottomOf="@+id/tv_order_delivery_date" />

</android.support.constraint.ConstraintLayout>
